<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name" translatable="false">Sulfur\'s Keyboard</string>
    <string name="english_ime_settings" translatable="false">Settings for Sulfur\'s Keyboard</string>
    <string name="english_ime_input_options" translatable="false">Input options</string>
    <string name="english_ime_description" translatable="false">English and Myanmar</string>
    <string name="vibrate_on_keypress" translatable="false">Vibrate on keypress</string>
    <string name="sound_on_keypress" translatable="false">Sound on keypress</string>
    <string name="popup_on_keypress" translatable="false">Popup on keypress</string>
    <string name="hit_correction" translatable="false">Correct typing errors</string>
    <string name="hit_correction_summary" translatable="false">Enable input error correction</string>
    <string name="hit_correction_land" translatable="false">Landscape input errors</string>
    <string name="hit_correction_land_summary" translatable="false">Enable input error correction</string>
    <string name="auto_correction" translatable="false">Word suggestions</string>
    <string name="auto_correction_summary" translatable="false">Automatically correct the previous word</string>
    <string name="prediction" translatable="false">Word suggestions</string>
    <string name="prediction_category" translatable="false">Word suggestion settings</string>
    <string name="prediction_summary" translatable="false">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title" translatable="false">Auto completion</string>
    <string name="prediction_landscape" translatable="false">Increase text field size</string>
    <string name="prediction_landscape_summary" translatable="false">Hide word suggestions in landscape view</string>
    <string name="auto_cap" translatable="false">Auto-capitalization</string>
    <string name="auto_cap_summary" translatable="false">Capitalize the start of a sentence</string>
    <string name="auto_punctuate" translatable="false">Auto-punctuate</string>
    <string name="auto_punctuate_summary" translatable="false"></string>
    <string name="quick_fixes" translatable="false">Quick fixes</string>
    <string name="quick_fixes_summary" translatable="false">Corrects commonly typed mistakes</string>
    <string name="show_suggestions" translatable="false">Show suggestions</string>
    <string name="show_suggestions_summary" translatable="false">Display suggested words while typing</string>
    <string name="suggestion_visibility_default_value" translatable="false">0</string>
	<string name="suggestion_visibility_show_value" translatable="false">0</string>
	<string name="suggestion_visibility_show_only_portrait_value" translatable="false">1</string>
	<string name="suggestion_visibility_hide_value" translatable="false">2</string>
	<string-array name="suggestion_visibility_values">
		<item>@string/suggestion_visibility_show_value</item>
		<item>@string/suggestion_visibility_show_only_portrait_value</item>
		<item>@string/suggestion_visibility_hide_value</item>
	</string-array>
	<string name="suggestion_visibility_show" translatable="false">Always show</string>
	<string name="suggestion_visibility_show_only_portrait" translatable="false">Show on portrait mode</string>
	<string name="suggestion_visibility_hide" translatable="false">Always hide</string>
	<string-array name="suggestion_visibilities">
		<item>@string/suggestion_visibility_show</item>
		<item>@string/suggestion_visibility_show_only_portrait</item>
		<item>@string/suggestion_visibility_hide</item>
	</string-array>
    <string name="auto_complete" translatable="false">Auto-complete</string>
    <string name="auto_complete_summary" translatable="false">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="auto_hide_minikeyboard" translatable="false">Auto hide morekeys keyboard</string>
    <string name="auto_hide_minikeyboard_true" translatable="false">Auto hide morekeys keyboard when release touch.</string>
    <string name="auto_hide_minikeyboard_false" translatable="false">Still morekeys keyboard when release touch.</string>
    <string name="prefs_settings_key" translatable="false">Show settings key</string>
    <string-array name="settings_key_modes_values" translatable="false">
        <item>@string/settings_key_mode_auto</item>
        <item>@string/settings_key_mode_always_show</item>
        <item>@string/settings_key_mode_always_hide</item>
    </string-array>
    <string name="settings_key_mode_auto_name" translatable="false">Automatic</string>
    <string name="settings_key_mode_always_show_name" translatable="false">Always show</string>
    <string name="settings_key_mode_always_hide_name" translatable="false">Always hide</string>
    <string-array name="settings_key_modes">
        <item>@string/settings_key_mode_auto_name</item>
        <item>@string/settings_key_mode_always_show_name</item>
        <item>@string/settings_key_mode_always_hide_name</item>
    </string-array>
    <string name="bigram_suggestion" translatable="false">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary" translatable="false">Use previous word to improve suggestion</string>
    <string-array name="prediction_modes" translatable="false">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none" translatable="false">0</string>
    <string name="prediction_basic" translatable="false">1</string>
    <string name="prediction_full" translatable="false">2</string>
    <string-array name="prediction_modes_values" translatable="false">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="prefs_language_key" translatable="false">Language switch key</string>
    <string-array name="language_key_modes" translatable="false">
        <item>Both Slide and Toggle</item>
        <item>Slide Spacebar</item>
        <item>Toggle Key</item>
    </string-array>
    <string name="language_key_both" translatable="false">0</string>
    <string name="language_key_slide" translatable="false">1</string>
    <string name="language_key_toggle" translatable="false">2</string>
    <string-array name="language_key_modes_values" translatable="false">
        <item>@string/language_key_both</item>
        <item>@string/language_key_slide</item>
        <item>@string/language_key_toggle</item>
    </string-array>
    <string name="default_language_key_mode" translatable="false">0</string>
    <string name="added_word" translatable="false"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="tip_long_press" translatable="false">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss" translatable="false">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols" translatable="false">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary" translatable="false">Press and hold the left-most word to add it to the dictionary</string>
    <string name="touch_to_continue" translatable="false">Touch this hint to continue »</string>
    <string name="touch_to_finish" translatable="false">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard" translatable="false"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents" translatable="false"><b>Touch &amp; hold a key to view accents\n(ø, ö, ô, ó, and so on)</b></string>
    <string name="tip_to_open_symbols" translatable="false"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols" translatable="false"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings" translatable="false"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing" translatable="false"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_symbol_mic_key">123\uF002</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="label_phone_alt_key">\uF0DC\uF0DD</string>
    <string name="label_num_alt_key">+ %</string>
    <string name="voice_warning_title" translatable="false">Voice input</string>
    <string name="voice_warning_locale_not_supported" translatable="false">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand" translatable="false">Voice input is an experimental feature using Google\'s networked speech recognition.</string>
    <string name="voice_warning_how_to_turn_off" translatable="false">To turn off voice input, go to keyboard settings.</string>
    <string name="language_selection_title" translatable="false">Input languages</string>
    <string name="language_selection_summary" translatable="false">Slide finger on spacebar to change language</string>
    <string name="prefs_enable_recorrection" translatable="false">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary" translatable="false">Touch entered words to correct them</string>
    <string name="layout_category" translatable="false">Layout Settings</string>
    <string name="keyboard_layout" translatable="false">Keyboard Theme</string>
    <string name="layout_ics_value" translatable="false">5</string>
    <string name="keyboard_text_size" translatable="false">Key Text Size</string>
    <string name="text_size_median_value" translatable="false">2</string>
    <string name="title_fullscreen_override" translatable="false">Landscape mode fullscreen editor</string>
    <string name="summary_fullscreen_override_true" translatable="false">Enabled on small devices</string>
    <string name="summary_fullscreen_override_false" translatable="false">Disabled, use standard view</string>
    <string name="title_force_keyboard_on" translatable="false">Show soft keyboard</string>
    <string name="summary_force_keyboard_on_true" translatable="false">Always</string>
    <string name="summary_force_keyboard_on_false" translatable="false">When no hardware keyboard is available</string>
    <string name="about_category" translatable="false">About</string>
    <string name="hint_text_normal" translatable="false">Normal</string>
    <string name="hint_text_personname" translatable="false">Person Name</string>
    <string name="hint_text_filter" translatable="false">Filter</string>
    <string name="hint_text_email" translatable="false">Email</string>
    <string name="hint_text_uri" translatable="false">Uri</string>
    <string name="hint_text_webedittext" translatable="false">Web Edit Text</string>
    <string name="hint_text_message" translatable="false">Message</string>
    <string name="hint_text_phone" translatable="false">Phone</string>
    <string name="hint_text_number" translatable="false">Number</string>
    <string name="hint_text_datetime" translatable="false">Date Time</string>
    <string name="hint_text_mutiline" translatable="false">Multi-line</string>
    <string name="title_activity_input_test" translatable="false">Test Keyboard</string>
    <string name="action_settings" translatable="false">Settings</string>
</resources>